calcom-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calcom
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: calcom
  template:
    metadata:
      labels:
        app: calcom
    spec:
      containers:
        - name: calcom
          image: calcom/cal.com
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /app/config
              name: calcom-pv-storage
      volumes:
        - name: calcom-pv-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
