studio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: studio
  template:
    metadata:
      labels:
        app: studio
    spec:
      containers:
        - name: studio
          image: calcom/cal.com
          ports:
            - containerPort: 5555
          volumeMounts:
            - name: studio-pv-storage
              mountPath: /app/config
      volumes:
        - name: studio-pv-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
