postgres-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 5432  # Port used by PostgreSQL
          protocol: TCP
      from:
        - podSelector:
            matchLabels:
              app: calcom
  egress:
    - ports:
        - port: 5432  # Port used by PostgreSQL
          protocol: TCP
      to:
        - podSelector:
            matchLabels:
              app: calcom
